# taskflow-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  railway.toml  requirements.txt  requiremets.txt
.github/workflows/: ci.yml
accounts/: serializers.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py
docker/postgres/: init.sql
tasks/: admin.py  models.py  permissions.py  serializers.py  test_crud.py  test_filter.py  test_security.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_rename_create_at_task_created_at.py
