[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskflow-api"
version = "1.0.0"
description = "Professional Django REST API for task management"
authors = [{name = "Gabriel Guajardo", email = "guajardog70@gmail.com"}]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "DJ001", # null=True on string-based fields
]

[tool.ruff.lint.isort]
known-django = ['django']
known-first-party = ['task','accounts', 'config']
section-order = ['future', 'standard-library','django','third-party','first-party','local-folder']

[tool.ruff.format]
quote-style = 'double'
skip-magic-trailing-comma = false