[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskflow-api"
version = "1.0.0"
description = "Professional Django REST API for task management"
authors = [{name = "Gabriel Guajardo", email = "guajardog70@gmail.com"}]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "DJ001", # null=True on string-based fields
]


[tool.ruff.lint.isort]
known-first-party = ["tasks", "accounts", "config"]
known-third-party = ["django", "rest_framework", "django_filters", "drf_spectacular"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

# Mantén las otras configuraciones si las necesitas
[tool.black]
target-version = ['py313']
line-length = 88
skip-string-normalization = true
extend-exclude = '''
/(
    \.git
  | \.venv
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line-length = 88
skip = ["migrations", ".venv"]
known_django = ["django"]
known_drf = ["rest_framework"]
known_first_party = ["tasks", "accounts", "config"]
sections = ["FUTURE", "STDLIB", "DJANGO", "DRF", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]